test: document CQ-0049 — type-index completion ignores JPMS readability
Record and reproduce a correctness gap found on the payment-dob-lathe
workspace: type-index completion offers types from modules the current
module does not read. In dob-core (whose module-info does not
`requires java.desktop`) Swing and AWS types complete, even though a real
`import javax.swing.JButton;` correctly fails to compile.

Why: TypeIndexValidator.isResolvable gates candidates on
Elements.getTypeElement(qualifiedName) != null. Single-arg getTypeElement
is a global lookup across every *observable* module in the graph and does
not check whether the current module *reads* the type's module, so
observable-but-unreadable types pass the filter. java.desktop reaches the
graph via a dependency's non-transitive `requires`, making it observable
but not readable. The member-access and import completion paths already
gate on Trees.isAccessible(scope, type); the type-index path is the only
one that skips it.

Add a @Disabled regression test that reproduces the exact dual condition
(observable but not readable) by compiling `module com.example.app {}`
with `--add-modules java.desktop`; a real import in that setup fails with
"module com.example.app does not read it", matching the workspace. The
pre-existing typeIndex_jpmsUnreadablePackage test is left unchanged — it
passed only because its minimal module graph never made java.desktop
observable, so it never exercised this case.

Record the gap as CQ-0049 (accepted, M1, correctness) in the gap tracker
with root cause and suggested fix (gate the validator on
Trees.isAccessible), plus a dated triage note.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>